# BarradasJudging

./: .env  Dockerfile  app.py  base64.txt  compose.yml  pyproject.toml
static/: exemplo.json
